--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,9 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0px;
 
 }
+.nav-menu ul #onlineorders:hover::after{
+    display: none;
+}
 /*
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
   color: #ffb03b;
@@ -1057,7 +1060,7 @@ section {
   background: rgb(141, 137, 137);
   background: rgba(78, 77, 77, 0.5); /* Black see-through */
   color: #f1f1f1; 
-  width: 83%;/*83%*/
+  width: auto;/*83%*/
   transition: .5s ease;
   opacity:0;
   color: white;
@@ -1166,6 +1169,7 @@ section {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
 @media(max-width: 992px){
   .overlay {
     position: absolute;
@@ -1220,6 +1224,13 @@ section {
   top: 60%;
   width: 80%;
 }*/
+#btn{
+  text-align: center;
+  margin-left: 450px;
+  font-size: 17px;
+  background: rgb(112, 106, 106);
+  color: white;
+}
 /*--------------------------------------------------------------
 # Specials
 --------------------------------------------------------------*/
