--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1141,6 +1141,13 @@ section {
 #img24:hover .overlay{
   opacity: 1;
 }
+.menu #btn{
+  text-align: center;
+  margin-left: 450px;
+  font-size: 17px;
+  background: rgb(112, 106, 106);
+  color: white;
+}
 .overlay {
   position: absolute;
   bottom: 100%;
@@ -1196,6 +1203,7 @@ section {
   }
 
 }
+
 /*.menu .gallery-item-menu:hover img{
   filter: blur(0.2px) brightness(100%);
   box-shadow: 0 0 16px cyan;
