--- a/assets/css/opencart.css
+++ b/assets/css/opencart.css
@@ -81,7 +81,7 @@
     left: 0;
     width: 100%;
     padding: 1.5rem 0;
-    line-height: 1rem;
+    line-height: 4.5rem;
     background-color: var(--black);
   }
   
@@ -126,8 +126,8 @@
    
  
     color: var(--black);
-   /*   padding: 1.3rem 1.5rem;
-    background-color: var(--yellow);
+   padding: 1.3rem 1.5rem;
+   /* background-color: var(--yellow);
    margin-left: 1070px;
    ;*/
   }
@@ -176,6 +176,7 @@
   }
   
   .products {
+    top: 0;
     padding: 15rem 0;
   }
   
@@ -419,5 +420,59 @@
       padding: 0.8rem 1.5rem;
       font-size: 1.6rem;
     }
+  }
+  #footer {
+    background: #35322d;
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    padding: 30px 0;
+  }
+  
+  #footer h3 {
+    font-size: 36px;
+    font-weight: 700;
+    color: #ffb03b;
+    position: relative;
+    padding: 0;
+    margin: 0 0 15px 0;
+  }
+  
+  #footer p {
+    font-size: 15;
+    font-style: italic;
+    padding: 0;
+    margin: 0 0 40px 0;
+  }
+  
+  #footer .social-links {
+    margin: 0 0 40px 0;
+  }
+  
+  #footer .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: #46423b;
+    color: #fff;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+  }
+  
+  #footer .social-links a:hover {
+    background: #ffb03b;
+  }
+  
+  #footer .copyright {
+    margin: 0 0 5px 0;
+  }
+  
+  #footer .credits {
+    font-size: 13px;
   }
   
