--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,7 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-nav {
   position: fixed;
   top: 55px;
+  height: 300px;
   right: 15px;
   bottom: 15px;
   left: 15px;
@@ -364,11 +365,24 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
 }
 
-.mobile-nav .book-a-table a {
+.mobile-nav .book-a-table  a {
   background: #ffb03b;
   color: #fff;
   border-radius: 50px;
   margin: 0 0 0 20px;
+  padding: 10px 25px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  display: inline-block;
+}
+.mobile-nav #onlineorder   {
+ margin-left: 115px;
+  color: #fff;
+  border-radius: 50px;
+ 
   padding: 10px 25px;
   text-transform: uppercase;
   font-size: 13px;
