--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -415,17 +415,17 @@ form a{
         position: absolute;
         top: 70px;
         left: 0;
-        background: #333;
+        height: 102px;
+       /** background: #333;*/
         width: 100%;
         overflow: hidden;
-        transition: max-height 0.5s;
+       
 
     }
     nav ul li{
-        display: block;
         margin-right: 50px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+       
+        font-size: 12px;
     }
     nav ul li a{
         color: #fff;
